--- a/index.html
+++ b/index.html
@@ -1,13 +1,85 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Entrenador de Entrevistas</title>
+    <link rel="stylesheet" href="src/style.css">
+    <!-- Tailwind CSS via CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Lucide Icons -->
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+
+  <body class="bg-gray-50 min-h-screen">
+    <div class="flex flex-col items-center justify-center min-h-screen p-4">
+      <h1 class="text-4xl md:text-5xl font-bold text-center text-[#1e2837] mb-4">ENTRENADOR DE ENTREVISTAS</h1>
+
+      <p class="text-xl text-center text-gray-600 mb-8">Hacé click para repartir 5 cartas</p>
+
+      <div class="flex flex-col md:flex-row w-full max-w-6xl gap-6 justify-center items-start">
+        <div class="flex flex-col items-center w-full md:w-3/4">
+          
+          <!-- Main Card (shown initially) -->
+          <div id="mainCard" class="w-64 h-80 bg-white rounded-xl border border-gray-200 shadow-md flex flex-col items-center justify-center cursor-pointer card">
+            <i data-lucide="spade" class="w-24 h-24 text-[#1e2837] mb-6"></i>
+            <p class="text-center text-gray-700 px-4">Hacé click para repartir 5 cartas</p>
+          </div>
+
+          <!-- Dealt Cards (hidden initially) -->
+          <div id="dealtCards" class="grid grid-cols-2 md:grid-cols-4 gap-4 w-full hidden">
+            <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-16 h-16 rounded-full bg-[#e57373] flex items-center justify-center">
+                <i data-lucide="club" class="w-10 h-10 text-white"></i>
+              </div>
+            </div>
+            <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-16 h-16 rounded-full bg-[#4285F4] flex items-center justify-center">
+                <i data-lucide="mic" class="w-10 h-10 text-white"></i>
+              </div>
+            </div>
+            <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-16 h-16 rounded-full bg-[#d7ccc8] flex items-center justify-center">
+                <i data-lucide="briefcase" class="w-10 h-10 text-white"></i>
+              </div>
+            </div>
+            <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-16 h-16 rounded-full bg-[#66bb6a] flex items-center justify-center">
+                <i data-lucide="help-circle" class="w-10 h-10 text-white"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div id="questionsPanel" class="w-full md:w-1/3 bg-white rounded-xl border border-gray-200 shadow-md p-6 mt-6 md:mt-0 hidden">
+          <div class="space-y-4 mb-6">
+            <div class="flex items-start gap-2">
+              <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
+              <p class="text-[#1e2837] font-medium">¿Pregio me aomíre tus?</p>
+            </div>
+            <div class="flex items-start gap-2">
+              <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
+              <p class="text-[#1e2837] font-medium">¿Porque interéses en esto posítion?</p>
+            </div>
+            <div class="flex items-start gap-2">
+              <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
+              <p class="text-[#1e2837] font-medium">¿Qué son tus fortadaza?</p>
+            </div>
+            <div class="flex items-start gap-2">
+              <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
+              <p class="text-[#1e2837] font-medium">¿Cómo de temar chálances?</p>
+            </div>
+          </div>
+          <button id="returnButton" class="w-full bg-[#4285F4] text-white py-3 px-4 rounded-md hover:bg-blue-600 transition-colors">
+            Volver al mazo
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
