--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             </div>
             <div class="flex items-start gap-2">
               <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
-              <p class="text-[#1e2837] font-medium">¿Porque interéses en esto posítion?</p>
+              <p class="text-[#1e2837] font-medium">¿Que te interesa de ésta posición?</p>
             </div>
             <div class="flex items-start gap-2">
               <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
-              <p class="text-[#1e2837] font-medium">¿Qué son tus fortadaza?</p>
+              <p class="text-[#1e2837] font-medium">¿Cuales son tus fortalezas?</p>
             </div>
             <div class="flex items-start gap-2">
               <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
