--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   </head>
 
-  <body class="bg-gray-50 min-h-screen">
+  <body class="min-h-screen">
+    <img src="/images/logo-laburatorio.webp" alt="Logo evento Laburatorio">
     <div class="flex flex-col items-center justify-center min-h-screen p-4">
       <h1 class="text-4xl md:text-5xl font-bold text-center text-[#1e2837] mb-4">ENTRENADOR DE ENTREVISTAS</h1>
 
@@ -79,6 +80,10 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <img src="/images/img-footer.webp" alt="Imagen del navbar">
+    </footer>
 
     <script type="module" src="src/main.js"></script>
   </body>
