--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
 
 
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
-              <div class="w-16 h-16 rounded-full bg-[#e57373] flex items-center justify-center">
-                <i data-lucide="club" class="w-10 h-10 text-white"></i>
+              <div class="w-19 h-19 flex items-center justify-center">
+                 <img src="./public/images/fondo-fundacion-bna.png" alt="" class="rounded-2xl">
               </div>
             </div>
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
-              <div class="w-16 h-16 rounded-full bg-[#4285F4] flex items-center justify-center">
-                <i data-lucide="mic" class="w-10 h-10 text-white"></i>
+              <div class="w-19 h-19 rounded-full flex items-center justify-center">
+                 <img src="./public/images/fondo-pescar.jpg" alt="" class="rounded-2xl">
               </div>
             </div>
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
-              <div class="w-16 h-16 rounded-full bg-[#d7ccc8] flex items-center justify-center">
-                <i data-lucide="briefcase" class="w-10 h-10 text-white"></i>
+              <div class="w-19 h-19 flex items-center justify-center">
+                <img src="./public/images/fondo-fundacion-bna.png" alt="" class="rounded-2xl">
               </div>
             </div>
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
-              <div class="w-16 h-16 rounded-full bg-[#66bb6a] flex items-center justify-center">
-                <i data-lucide="help-circle" class="w-10 h-10 text-white"></i>
+              <div class="w-19 h-19 rounded-full flex items-center justify-center">
+                <img src="./public/images/fondo-pescar.jpg" alt="" class="rounded-2xl">
               </div>
             </div>
           </div>
