--- a/index.html
+++ b/index.html
@@ -95,8 +95,21 @@
     </main>
 
     <footer class="w-full mt-auto">
-        <img src="/images/img-footer.webp" alt="Imagen del navbar"
+      <div class="bg-white py-6">
+        <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-6 px-4">
+          <div class="flex gap-4">
+            <img src="/images/fondo-bna-blanco.webp" alt="" class="h-24 w-24 object-contain">
+            <img src="/images/logo-pescar-completo.webp" alt="" class="h-24 w-24 object-contain">
+          </div>
+          <p class="text-center md:text-left text-sm md:text-base text-[#1e2837]">
+            Página creada por alumnos de la <strong>Fundación Pescar 🎣</strong>
+          </p>
+      </div>
+        </div>
+        <div class="w-full">
+          <img src="/images/img-footer.webp" alt="Imagen del navbar"
           class="w-full object-cover">
+        </div>
     </footer>
 
     <script type="module" src="src/main.js"></script>
