--- a/index.html
+++ b/index.html
@@ -18,15 +18,11 @@
       <img src="/images/logo-laburatorio.webp" alt="Logo evento Laburatorio"
           class="h-40 md:h-42 object-contain">
     </header>
-
-      <p class="text-xl text-center mb-8">Hacé click para repartir 5 cartas</p>
-
-
     <main class="flex flex-col items-center justify-center min-h-screen p-4">
 
       <h1 class="text-4xl md:text-5xl font-bold text-center mb-4">ENTRENADOR DE ENTREVISTAS</h1>
 
-      <p class="text-xl text-center mb-8">Hacé click para repartir 5 cartas</p>
+      <p class="text-xl text-center mb-8">Seleccioná una carta</p>
 
       <div class="flex flex-col md:flex-row w-full max-w-6xl gap-6 justify-center items-start"> <!-- Contenedor principal -->
         <div class="flex flex-col items-center w-full md:w-3/4">
@@ -39,7 +35,6 @@
 
           <!-- Cartas que aparecen despues (al principio estan ocultas) -->
           <div id="dealtCards" class="grid grid-cols-2 md:grid-cols-4 gap-4 w-full hidden">
-
 
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
               <div class="w-19 h-19 flex items-center justify-center">
@@ -59,6 +54,11 @@
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
               <div class="w-19 h-19 rounded-full flex items-center justify-center">
                 <img src="./public/images/fondo-pescar.jpg" alt="" class="rounded-2xl">
+              </div>
+            </div>
+            <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-19 h-19 flex items-center justify-center">
+                <img src="./public/images/fondo-fundacion-bna.png" alt="" class="rounded-2xl">
               </div>
             </div>
           </div>
