--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="/images/logo-laburatorio.webp" alt="Logo evento Laburatorio"
           class="h-40 md:h-42 object-contain">
     </header>
-    <main class="flex flex-col items-center justify-center min-h-screen p-4">
+    <main class="flex flex-col items-center justify-center py-6">
 
       <h1 class="text-4xl md:text-5xl font-bold text-center mb-4">ENTRENADOR DE ENTREVISTAS</h1>
 
