feat: cambio nombre

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrenador de Entrevistas</title>
+    <title>Simulador de entrevistas express - Laburatorio por Fundación Banco Nación</title>
     <link rel="stylesheet" href="src/style.css">
     <!-- Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -20,7 +20,7 @@
     </header>
     <main class="flex flex-col items-center justify-center py-6">
 
-      <h1 class="text-4xl md:text-5xl font-bold text-center mb-4">ENTRENADOR DE ENTREVISTAS</h1>
+      <h1 class="text-4xl md:text-5xl font-bold text-center mb-4">SIMULADOR DE ENTREVISTAS EXPRESS</h1>
 
       <p class="text-xl text-center mb-8">Seleccioná una carta</p>
 
