--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <h1 class="text-4xl md:text-5xl font-bold text-center mb-4">ENTRENADOR DE ENTREVISTAS</h1>
 
-      <p class="text-xl text-center mb-8">Seleccioná una carta</p>
+      <p class="text-xl text-center mb-8">Hacé click para repartir 5 cartas</p>
 
       <div class="flex flex-col md:flex-row w-full max-w-6xl gap-6 justify-center items-start"> <!-- Contenedor principal -->
         <div class="flex flex-col items-center w-full md:w-3/4">
@@ -30,7 +30,7 @@
           <!-- Carta Principal -->
           <div id="mainCard" class="w-64 h-80 bg-white rounded-xl border border-gray-200 shadow-md flex flex-col items-center justify-center cursor-pointer card">
             <i data-lucide="spade" class="w-24 h-24 text-[#1e2837] mb-6"></i>
-            <p class="text-center text-gray-700 px-4">Hacé click para repartir 5 cartas</p>
+            <p class="text-center text-gray-700 px-4">Apretá el mazo</p>
           </div>
 
           <!-- Cartas que aparecen despues (al principio estan ocultas) -->
@@ -38,56 +38,31 @@
 
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
               <div class="w-19 h-19 flex items-center justify-center">
-                 <img src="./public/images/fondo-fundacion-bna.png" alt="" class="rounded-2xl">
+                 <img src="images/fondo-fundacion-bna.png" alt="" class="rounded-2xl">
               </div>
             </div>
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
               <div class="w-19 h-19 rounded-full flex items-center justify-center">
-                 <img src="./public/images/fondo-pescar.jpg" alt="" class="rounded-2xl">
+                 <img src="images/fondo-pescar.jpg" alt="" class="rounded-2xl">
               </div>
             </div>
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
               <div class="w-19 h-19 flex items-center justify-center">
-                <img src="./public/images/fondo-fundacion-bna.png" alt="" class="rounded-2xl">
+                <img src="images/fondo-fundacion-bna.png" alt="" class="rounded-2xl">
               </div>
             </div>
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
               <div class="w-19 h-19 rounded-full flex items-center justify-center">
-                <img src="./public/images/fondo-pescar.jpg" alt="" class="rounded-2xl">
+                <img src="images/fondo-pescar.jpg" alt="" class="rounded-2xl">
               </div>
             </div>
             <div class="w-full aspect-[3/4] bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
               <div class="w-19 h-19 flex items-center justify-center">
-                <img src="./public/images/fondo-fundacion-bna.png" alt="" class="rounded-2xl">
+                <img src="images/fondo-fundacion-bna.png" alt="" class="rounded-2xl">
               </div>
             </div>
           </div>
 
-        </div>
-
-
-        <div id="questionsPanel" class="w-full md:w-1/3 bg-white rounded-xl border border-gray-200 shadow-md p-6 mt-6 md:mt-0 hidden">
-          <div class="space-y-4 mb-6">
-            <div class="flex items-start gap-2">
-              <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
-              <p class="text-[#1e2837] font-medium">¿Pregio me aomíre tus?</p>
-            </div>
-            <div class="flex items-start gap-2">
-              <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
-              <p class="text-[#1e2837] font-medium">¿Que te interesa de ésta posición?</p>
-            </div>
-            <div class="flex items-start gap-2">
-              <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
-              <p class="text-[#1e2837] font-medium">¿Cuales son tus fortalezas?</p>
-            </div>
-            <div class="flex items-start gap-2">
-              <i data-lucide="search" class="w-6 h-6 text-[#1e2837] mt-1 flex-shrink-0"></i>
-              <p class="text-[#1e2837] font-medium">¿Cómo de temar chálances?</p>
-            </div>
-          </div>
-          <button id="returnButton" class="w-full bg-[#4285F4] text-white py-3 px-4 rounded-md hover:bg-blue-600 transition-colors">
-            Volver al mazo
-          </button>
         </div>
 
       </div> <!-- Contenedor principal -->
