--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <!-- Cartas que aparecen despues (al principio estan ocultas) -->
           <div id="dealtContainer" class="hidden flex flex-col items-center"> <!-- Contenedor de cartas -->
             <div id="dealtCards" 
-              class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-5 w-full justify-items-center">
+              class="grid grid-cols-4 gap-4 w-full justify-items-center">
               <!-- carta 1 -->
               <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
                 <div class="card-inner">
@@ -93,11 +93,47 @@
                   <div class="card-front flex items-center justify-center">
                     <img src="images/fondo-fundacion-bna.png" alt="" class="rounded-2xl h-24 w-24">
                   </div>
+
+                  <!-- card-back -->
+                  <div class="card-back flex items-center justify-center"></div>
+                </div> <!-- card-innit -->
+              </div> <!-- Contenedor principal carta 5 -->
+
+              <!-- carta 6 -->
+              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+                <div class="card-inner">
+                  <div class="card-front flex items-center justify-center">
+                    <img src="images/logo-pescar-completo.webp" alt="" class="rounded-2xl h-35 w-35">
+                </div>
+
+                <!-- card-back -->
+                  <div class="card-back flex items-center justify-center"></div>
+                </div> <!-- card-innit -->
+              </div> <!-- Contenedor principal carta 6 -->
+
+              <!-- carta 7 -->
+              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+                <div class="card-inner">
+                  <div class="card-front flex items-center justify-center">
+                    <img src="images/fondo-fundacion-bna.png" alt="" class="rounded-2xl h-24 w-24">
+                  </div>
+
+                  <!-- card-back -->
+                  <div class="card-back flex items-center justify-center"></div>
+                </div> <!-- card-innit -->
+              </div> <!-- Contenedor principal carta 7 -->
+
+              <!-- carta 8 -->
+              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+                <div class="card-inner">
+                  <div class="card-front flex items-center justify-center">
+                    <img src="images/logo-pescar-completo.webp" alt="" class="rounded-2xl h-35 w-35">
+                  </div>
   
                   <!-- card-back -->
                 <div class="card-back flex items-center justify-center"></div>
                 </div> <!-- card-innit -->
-              </div> <!-- Contenedor principal carta 5 -->
+              </div> <!-- Contenedor principal carta 8 -->
             </div>
             <!-- Botón de Volver al Mazo -->
             <button id="returnButton" 
@@ -114,16 +150,16 @@
       <div class="bg-white py-6">
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-6 px-4">
           <div class="flex gap-4">
-            <img src="/images/fondo-bna-blanco.webp" alt="" class="h-24 w-24 object-contain">
-            <img src="/images/logo-pescar-completo.webp" alt="" class="h-24 w-24 object-contain">
+            <img src="images/fondo-bna-blanco.webp" alt="" class="h-24 w-24 object-contain">
+            <img src="images/logo-pescar-completo.webp" alt="" class="h-24 w-24 object-contain">
           </div>
           <p class="text-center md:text-left text-sm md:text-base text-[#1e2837]">
-            Página creada por alumnos de la <strong>Fundación Pescar 🎣</strong>
+            Página creada por alumnos de la <strong><a href="https://www.pescar.org.ar/">Fundación Pescar 🎣</a></strong>
           </p>
       </div>
         </div>
         <div class="w-full">
-          <img src="/images/img-footer.webp" alt="Imagen del navbar"
+          <img src="images/img-footer.webp" alt="Imagen del navbar"
           class="w-full object-cover">
         </div>
     </footer>
