feat: cambios en el diseño y para el despliegue

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Entrevistas Express - Laburatorio Fundación Banco Nación</title>
-    <link rel="stylesheet" href="src/style.css">
-    <link rel="stylesheet" href="src/animacion-carta.css">
-    <!-- Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Lucide Icons -->
+    <link rel="stylesheet" href="src/style.css">
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 
@@ -16,14 +13,14 @@
 
   <body class="min-h-screen flex flex-col justify-between bg-[#046089] text-white">
     <header class="w-full flex justify-center py-4">
-      <img src="public/images/logo-laburatorio.webp" alt="Logo evento Laburatorio"
+      <img src="/images/logo-laburatorio.webp" alt="Logo evento Laburatorio"
           class="h-40 md:h-42 object-contain">
     </header>
     <main class="flex flex-col items-center justify-center py-6">
       <h1 class="text-4xl md:text-5xl font-bold text-center mb-4">SIMULADOR DE ENTREVISTAS EXPRESS</h1>
       <p id="subtituloCartas" class="text-xl text-center mb-8">Hacé click para repartir 5 cartas</p>
       <div class="flex flex-col md:flex-row w-full max-w-6xl gap-6 justify-center items-start"> <!-- Contenedor principal -->
-        <div class="flex flex-col items-center w-full md:w-3/4"> <!-- Flex -->
+        <div class="flex flex-col items-center w-full md:w-3/4 overflow-x-visible"> <!-- Flex -->
           
           <!-- Carta Principal -->
           <div id="mainCard" class="w-64 h-80 bg-white rounded-xl border border-gray-200 shadow-md flex flex-col items-center justify-center cursor-pointer card">
@@ -34,13 +31,14 @@
           <!-- Cartas que aparecen despues (al principio estan ocultas) -->
           <div id="dealtContainer" class="hidden flex flex-col items-center"> <!-- Contenedor de cartas -->
             <div id="dealtCards" 
-              class="grid grid-cols-4 gap-4 w-full justify-items-center">
+              class="grid w-full max-w-6xl grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 
+        gap-y-6 gap-x-60 px-4 justify-items-center">
               <!-- carta 1 -->
-              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-64 bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
                 <div class="card-inner">
                   <!-- Carta de frente -->
                   <div class="card-front flex items-center justify-center">
-                    <img src="public/images/fondo-fundacion-bna.png" alt="" class="rounded-2xl h-24 w-24">
+                    <img src="/images/fondo-fundacion-bna.png" alt="Logo Fundación Banco Nación" class="rounded-2xl h-24 w-24">
                   </div>
   
                   <!-- card-back -->
@@ -50,10 +48,10 @@
   
   
               <!-- carta 2 -->
-              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-64 bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
                 <div class="card-inner">
                   <div class="card-front flex items-center justify-center">
-                    <img src="public/images/logo-pescar-completo.webp" alt="" class="rounded-2xl h-35 w-35">
+                    <img src="/images/logo-pescar-completo.webp" alt="Logo Fundación Pescar" class="rounded-2xl h-35 w-35">
                   </div>
   
                   <!-- card-back -->
@@ -63,10 +61,10 @@
   
   
               <!-- carta 3 -->
-              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-64 bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
                 <div class="card-inner">
                   <div class="card-front flex items-center justify-center">
-                    <img src="public/images/fondo-fundacion-bna.png" alt="" class="rounded-2xl h-24 w-24">
+                    <img src="/images/fondo-fundacion-bna.png" alt="Logo Fundación Banco Nación" class="rounded-2xl h-24 w-24">
                   </div>
   
                   <!-- card-back -->
@@ -76,10 +74,10 @@
   
   
               <!-- carta 4 -->
-              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-64 bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
                 <div class="card-inner">
                   <div class="card-front flex items-center justify-center">
-                    <img src="public/images/logo-pescar-completo.webp" alt="" class="rounded-2xl h-35 w-35">
+                    <img src="/images/logo-pescar-completo.webp" alt="Logo Fundación Pescar" class="rounded-2xl h-35 w-35">
                   </div>
   
                   <!-- card-back -->
@@ -88,10 +86,10 @@
               </div> <!-- Contenedor principal carta 4 -->
   
               <!-- carta 5 -->
-              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-64 bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
                 <div class="card-inner">
                   <div class="card-front flex items-center justify-center">
-                    <img src="public/images/fondo-fundacion-bna.png" alt="" class="rounded-2xl h-24 w-24">
+                    <img src="/images/fondo-fundacion-bna.png" alt="Logo Fundación Banco Nación" class="rounded-2xl h-35 w-35">
                   </div>
 
                   <!-- card-back -->
@@ -100,10 +98,10 @@
               </div> <!-- Contenedor principal carta 5 -->
 
               <!-- carta 6 -->
-              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-64 bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
                 <div class="card-inner">
                   <div class="card-front flex items-center justify-center">
-                    <img src="public/images/logo-pescar-completo.webp" alt="" class="rounded-2xl h-35 w-35">
+                    <img src="/images/logo-pescar-completo.webp" alt="Logo Fundación Pescar" class="rounded-2xl h-35 w-35">
                 </div>
 
                 <!-- card-back -->
@@ -112,10 +110,10 @@
               </div> <!-- Contenedor principal carta 6 -->
 
               <!-- carta 7 -->
-              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-64 bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
                 <div class="card-inner">
                   <div class="card-front flex items-center justify-center">
-                    <img src="public/images/fondo-fundacion-bna.png" alt="" class="rounded-2xl h-24 w-24">
+                    <img src="/images/fondo-fundacion-bna.png" alt="Logo Fundación Banco Nación" class="rounded-2xl h-24 w-24">
                   </div>
 
                   <!-- card-back -->
@@ -124,10 +122,10 @@
               </div> <!-- Contenedor principal carta 7 -->
 
               <!-- carta 8 -->
-              <div class="w-full bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
+              <div class="w-64 bg-white rounded-xl border border-gray-200 shadow-md flex items-center justify-center card card-dealt">
                 <div class="card-inner">
                   <div class="card-front flex items-center justify-center">
-                    <img src="public/images/logo-pescar-completo.webp" alt="" class="rounded-2xl h-35 w-35">
+                    <img src="/images/logo-pescar-completo.webp" alt="Logo Fundación Pescar" class="rounded-2xl h-35 w-35">
                   </div>
   
                   <!-- card-back -->
@@ -150,16 +148,16 @@
       <div class="bg-white py-6">
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-6 px-4">
           <div class="flex gap-4">
-            <img src="images/fondo-bna-blanco.webp" alt="" class="h-24 w-24 object-contain">
-            <img src="images/logo-pescar-completo.webp" alt="" class="h-24 w-24 object-contain">
+            <img src="/images/fondo-bna-blanco.webp" alt="Logo Fundación Banco Nación" class="h-24 w-24 object-contain">
+            <img src="/images/logo-pescar-completo.webp" alt="Logo Fundación Pescar" class="h-24 w-24 object-contain">
           </div>
           <p class="text-center md:text-left text-sm md:text-base text-[#1e2837]">
-            Página creada por alumnos de la <strong><a href="https://www.pescar.org.ar/">Fundación Pescar 🎣</a></strong>
+            Página creada por alumnos de la <strong><a href="https://www.pescar.org.ar/" target="_blank">Fundación Pescar 🎣</a></strong>
           </p>
       </div>
         </div>
         <div class="w-full">
-          <img src="images/img-footer.webp" alt="Imagen del navbar"
+          <img src="/images/img-footer.webp" alt="Imagen del navbar"
           class="w-full object-cover">
         </div>
     </footer>
