agregue los logos de pescar y valtech

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Juego de Mentores - Valtech</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./src/style.css">
 </head>
 <body class="min-h-screen flex flex-col items-center justify-between bg-black text-white">
-  <header class="w-full flex justify-center py-6 bg-white">
-    <img src="https://www.valtech.com/static/logo-valtech-black-9d4bc46a0c6d68b09307f4f4a5e89f3d.svg" alt="Valtech Logo" class="h-16 object-contain">
+  <header class="w-full flex justify-center py-6 bg-white gap-8">
+    <img src="./public/images/Valtech-logo-01-1-300x150.png" alt="Valtech Logo" class="h-16 w-36 object-contain">
+    <img src="./public/images/logo-pescar-completo.webp" alt="Pescar Logo" class="h-16 w-36 object-contain">
   </header>
 
   <div class="flex flex-col items-center justify-center py-8 w-full max-w-7xl px-4">
@@ -65,13 +66,13 @@
 
   <footer class="w-full mt-auto bg-white text-black py-6">
     <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-6 px-4">
-      <img src="https://www.valtech.com/static/logo-valtech-black-9d4bc46a0c6d68b09307f4f4a5e89f3d.svg" alt="Valtech Logo" class="h-12 object-contain">
+      <img src="./public/images/Valtech-logo-01-1-300x150.png" alt="Valtech Logo" class="h-16 w-36 object-contain">
       <p class="text-center md:text-left text-sm md:text-base">
         Juego creado para la charla con mentores técnicos de Valtech
       </p>
     </div>
   </footer>
 
-  <script src="main.js"></script>
+  <script src="/src/main.js"></script>
 </body>
 </html>
