--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="./public/images/logo-pescar-completo.webp" alt="Pescar Logo" class="h-16 w-36 object-contain">
   </header>
 
-  <div class="flex flex-col items-center justify-center py-8 w-full max-w-7xl px-4">
+  <div class="flex flex-col items-center justify-center min-h-[70vh] py-8 w-full max-w-7xl px-4">
     <h1 class="text-4xl md:text-5xl font-bold text-center mb-4">JUEGO DE MENTORES</h1>
 
     <div id="start-screen" class="flex flex-col items-center space-y-6 mt-8">
